--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tu diseño.html">¡Tu Diseño!</a>
+                            <a class="nav-link" href="Tu diseño.html">¡Tu Diseño!</a>
                         </li>
                     </ul>
                 </div>
