--- a/producto.html
+++ b/producto.html
@@ -23,7 +23,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="imagenes/Logo/logo.svg" alt="West Targets">
+                    <img src="Imagenes/Logo/logo.svg" alt="West Targets">
                 </a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tu diseño.html">¡Tu Diseño!</a>
+                            <a class="nav-link" href="Tu diseño.html">¡Tu Diseño!</a>
                         </li>
                     </ul>
                 </div>
