--- a/Tu diseño.html
+++ b/Tu diseño.html
@@ -23,7 +23,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="imagenes/Logo/logo.svg" alt="West Targets">
+                    <img src="Imagenes/Logo/logo.svg" alt="West Targets">
                 </a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
